--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
         </div>
     </section>
-    <section class="Contact_us px-10 py-10 bg-[#ffffff] ">
+    <section class="Contact_us px-10 py-10 bg-[#ffffff] max-w-screen-xl m-auto">
         <div>
         <h1 class="text-center text-[#D1631C] text-2xl font-bold mb-10">CONTACT-US</h1>
 
@@ -493,10 +493,6 @@
                         </form>
                     </div>
                     <div class="contact-info flex flex-col   ">
-                        <!-- <h2 class="text-xl font-semibold text-[#D1631C]">Contact Information</h2>
-                        <p class=""><i class="mr-5 text-2xl border-2 border-[#D1631C] px-2 py-1 bg-[#D1631C] rounded-lg text-white fa-solid fa-envelope"></i> Email: contact@example.com</p>
-                        <p><i class="mr-5 text-2xl border-2 border-[#D1631C] px-3 py-1 bg-[#D1631C] text-white rounded-lg fa-solid fa-square-phone"></i>Phone: +91 6307660838</p>
-                        <p> <i class="mr-5 text-2xl border-2 border-[#D1631C] px-3 py-1 bg-[#D1631C] rounded-lg text-white fa-solid fa-location-dot"></i>Address: Lorem ipsum dolor, </p> -->
                         <iframe class="map w-full rounded-lg " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28835.55417741381!2d82.54775020479669!3d25.389935186264246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398fde0eeba498d3%3A0xfabbe137e48d4bf4!2sBhadohi%20Nagar%20Palika%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1699431960357!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
